--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -1,1 +1,5 @@
 // Entry point for your Sass build
+@import '@rolemodel/optics/dist/css/optics';
+@import '@rolemodel/optics/dist/css/addons/fonts/phosphor_icons';
+
+@import './components/game.scss';
