--- a/app/views/games/_game.html.slim
+++ b/app/views/games/_game.html.slim
@@ -1,3 +1,8 @@
 .game
   span = game.name 
-  span = game.players_count
+  span = "#{game.users.count}/#{game.players_count}"
+  = link_to "Play", game, class: "btn"
+  / - if game.users.include? current_user
+    = link_to "Play", game, class: "btn"
+  / - else 
+    = link_to "Join", game, class: "btn"
