--- a/app/views/games/index.html.slim
+++ b/app/views/games/index.html.slim
@@ -1,4 +1,16 @@
-span Games
-= render @games
-= button_to "Sign out", destroy_user_session_path, method: :delete, class: "btn"
-= link_to "New game", new_game_path, class: "btn"
+.app-with-sidebar
+  .sidebar
+    .sidebar__brand 
+      span Go Fish
+    .sidebar__content
+      span.btn
+        i.icon.icon--x-large.ph.ph-joystick
+        span Games
+    .sidebar__content.sidebar__content--end
+      .divider
+      = button_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn--destructive"
+  .app__content
+    .game.game--header
+      span Games
+      = link_to "New game", new_game_path, class: "btn btn--primary"
+    = render @games
