--- a/app/views/games/new.html.slim
+++ b/app/views/games/new.html.slim
@@ -1,7 +1,5 @@
 span New game
 = simple_form_for [ @game ] do |form|
-  = form.label :name
-  = form.text_field :name
-  = form.label :players_count
-  = form.input :players_count
-  = form.submit class: "btn"
+  = form.input :name, type: "text"
+  = form.input :players_count, type: "number"
+  = form.submit class: "btn btn--primary"
