--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,5 +1,5 @@
 doctype html
-html
+html data-theme-mode='light'
   head
     title Go Fish Rails
     = csrf_meta_tags
@@ -7,6 +7,5 @@ html
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true
     meta content="width=device-width, initial-scale=1" name="viewport"
-  body.app-body
-    .app__content
-      = yield
+  body
+    = yield
