--- a/app/views/games/new.html.slim
+++ b/app/views/games/new.html.slim
@@ -3,3 +3,4 @@ span New game
   = form.input :name, type: "text"
   = form.input :players_count, type: "number"
   = form.submit class: "btn btn--primary"
+= link_to "Back to games", games_path, class: "btn"
