--- a/app/views/games/new.html.slim
+++ b/app/views/games/new.html.slim
@@ -1,6 +1,3 @@
 span New game
-= simple_form_for [ @game ] do |form|
-  = form.input :name, type: "text"
-  = form.input :players_count, type: "number"
-  = form.submit class: "btn btn--primary"
+= render "form", game: @game
 = link_to "Back to games", games_path, class: "btn"
