--- a/app/views/games/_game.html.slim
+++ b/app/views/games/_game.html.slim
@@ -18,6 +18,7 @@
     .panel__header 
       span Hand
     .panel__content
+      = game.get_player_by_user(current_user)&.hand
   .panel.panel--books
     .panel__header 
       span Books
