--- a/app/assets/stylesheets/components/panel.scss
+++ b/app/assets/stylesheets/components/panel.scss
@@ -3,6 +3,7 @@
 
   display: grid;
   grid-template-rows: var(--gf-panel-header-height) 1fr;
+  overflow: hidden;
 
   .panel__header {
     display: flex;
@@ -12,6 +13,13 @@
     padding: var(--op-space-x-small);
 
     box-shadow: inset var(--op-border-top) var(--op-color-border);
+  }
+
+  .panel__content {
+    padding: var(--op-space-large);
+    &.panel__content--h-scroll {
+      overflow-x: auto;
+    }
   }
 
   &.panel--feed {
