--- a/app/views/games/_game.html.slim
+++ b/app/views/games/_game.html.slim
@@ -14,6 +14,7 @@
     .panel.panel--feed
       .panel__header 
         span Feed
+        span.badge.badge--primary = "#{game.current_player.name}'s Turn"
       .panel__content
     .panel.panel--hand
       .panel__header 
