--- a/app/views/games/_game.html.slim
+++ b/app/views/games/_game.html.slim
@@ -16,6 +16,11 @@
         span Feed
         span.badge.badge--primary = "#{game.current_player.name}'s Turn"
       .panel__content
+        .feed 
+          = simple_form_for :round, url: game_rounds_path(game), html: { class: "feed__request-form" } do |form|
+            = form.input :target, collection: game.go_fish.players, prompt: "Select target", class: "form-control"
+            = form.input :request, collection: game.get_player_by_user(current_user).hand.map(&:rank).uniq, prompt: "Select request", class: "form-control"
+            = form.submit "Play Round", class: "btn btn--primary"
     .panel.panel--hand
       .panel__header 
         span Hand
