--- a/app/views/games/_game.html.slim
+++ b/app/views/games/_game.html.slim
@@ -1,36 +1,8 @@
 - if game.users.count == game.players_count
   .game 
-    .panel.panel--players
-      .panel__header 
-        span.game__title
-          a href=games_path
-            i.icon.icon--large.ph.ph-arrow-left
-          span = game.name
-        span.game__title = "#{game.users.count}/#{game.players_count}"
-      .panel__content 
-        - game.users.each do |user|
-          .player
-            span = user.email
-    .panel.panel--feed
-      .panel__header 
-        span Feed
-        span.badge.badge--primary = "#{game.current_player.name}'s Turn"
-      .panel__content
-        .feed 
-          = simple_form_for :round, url: game_rounds_path(game), html: { class: "feed__request-form" } do |form|
-            = form.input :target, collection: game.go_fish.players, prompt: "Select target", class: "form-control"
-            = form.input :request, collection: game.get_player_by_user(current_user).hand.map(&:rank).uniq, prompt: "Select request", class: "form-control"
-            = form.submit "Play Round", class: "btn btn--primary"
-    .panel.panel--hand
-      .panel__header 
-        span Hand
-      .panel__content.panel__content--h-scroll
-        .cards
-          - game.get_player_by_user(current_user).hand.each do |card|
-            = image_tag "cards/#{card.rank}#{card.suit}.svg", class: "cards__card", alt: "#{card.rank}#{card.suit}"
-    .panel.panel--books
-      .panel__header 
-        span Books
-      .panel__content
+    = render "games/players", game: game
+    = render "games/feed", game: game
+    = render "games/hand", game: game
+    = render "games/books", game: game
 - else
   span Waiting for players...
