--- a/app/views/games/_feed.html.slim
+++ b/app/views/games/_feed.html.slim
@@ -6,7 +6,16 @@
     .feed 
       .feed__responses
         - game.go_fish.round_results.each do |round|
-          .feed__bubble.feed__bubble--player-action = "You asked #{round.target} for #{round.request}s"
+          .feed__bubble.feed__bubble--player-action
+            span = round.player_action(game.get_player_by_user(current_user))
+          .feed__response
+            i.icon.ph.ph-arrow-elbow-down-right
+            .feed__bubble.feed__bubble--player-response
+              span = round.player_response(game.get_player_by_user(current_user))
+          .feed__response
+            i.icon.ph.ph-arrow-elbow-down-right
+            .feed__bubble.feed__bubble--game-response
+              span = round.game_response(game.get_player_by_user(current_user))
       = simple_form_for :round, url: game_rounds_path(game), html: { class: "feed__request-form" } do |form|
         = form.input :target, collection: game.opponents(current_user).map(&:name), prompt: "Select target", class: "form-control"
         = form.input :request, collection: game.get_player_by_user(current_user).hand.map(&:rank).uniq, prompt: "Select request", class: "form-control"
