--- a/app/assets/stylesheets/components/feed.scss
+++ b/app/assets/stylesheets/components/feed.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: start;
     gap: var(--op-space-small);
+    overflow: auto;
 
     .feed__response {
       width: 100%;
