--- a/app/views/games/_hand.html.slim
+++ b/app/views/games/_hand.html.slim
@@ -3,5 +3,5 @@
     span Hand
   .panel__content.panel__content--h-scroll
     .cards
-      - game.get_player_by_user(current_user).hand.each do |card|
+      - game.get_player_by_user(current_user).hand.sort.reverse.each do |card|
         = image_tag "cards/#{card.rank}#{card.suit}.svg", class: "cards__card", alt: "#{card.rank}#{card.suit}"
