--- a/app/assets/stylesheets/components/feed.scss
+++ b/app/assets/stylesheets/components/feed.scss
@@ -25,7 +25,7 @@
     font-size: var(--op-font-small);
 
     padding: var(--op-space-small);
-    border-radius: var(--op-radius-large);
+    border-radius: var(--op-radius-x-large);
 
     &.feed__bubble--player-action {
       width: auto;
