--- a/app/views/games/_books.html.slim
+++ b/app/views/games/_books.html.slim
@@ -2,3 +2,6 @@
   .panel__header 
     span Books
   .panel__content
+    .cards.cards--books 
+      - game.get_player_by_user(current_user).books.each do |book|
+        = image_tag "cards/#{book.first.rank}#{book.first.suit}.svg", class: "cards__card", alt: "#{book.first.rank}#{book.first.suit}"
