--- a/app/views/games/_feed.html.slim
+++ b/app/views/games/_feed.html.slim
@@ -19,7 +19,7 @@
                 span = round.game_response(game.get_player_by_user(current_user))
       = simple_form_for :round, url: game_rounds_path(game), html: { class: "feed__request-form" } do |form|
         = form.input :target, collection: game.opponents(current_user).map(&:name), prompt: "Select target", class: "form-control"
-        = form.input :request, collection: game.get_player_by_user(current_user).hand.sort.map(&:rank).uniq, prompt: "Select request", class: "form-control"
+        = form.input :request, collection: game.get_player_by_user(current_user).hand.sort.reverse.map(&:rank).uniq, prompt: "Select request", class: "form-control"
         - if game.current_player == game.get_player_by_user(current_user)
           = form.submit "Play Round", class: "btn btn--primary"
         - else 
