Add player accordions

--- a/app/assets/stylesheets/components/cards.scss
+++ b/app/assets/stylesheets/components/cards.scss
@@ -10,5 +10,21 @@
 
   .cards__card {
     height: var(--gf-playing-card-height);
+    position: relative;
+    bottom: 0;
+    transition: 0.1s;
+
+    &:hover {
+      bottom: var(--op-space-medium);
+    }
+  }
+
+  &.cards--books {
+    --gf-playing-card-height: 15rem;
+  }
+
+  &.cards--player {
+    --gf-playing-card-height: 12rem;
+    --gf-playing-card-overlap: -5rem;
   }
 }
