--- a/app/views/games/_players.html.slim
+++ b/app/views/games/_players.html.slim
@@ -1,5 +1,5 @@
 .panel.panel--players
-  .panel__header 
+  .panel__header.game__header
     span.game__title
       a href=games_path
         i.icon.icon--large.ph.ph-arrow-left
