Add book message to feed

--- a/app/assets/stylesheets/components/feed.scss
+++ b/app/assets/stylesheets/components/feed.scss
@@ -45,6 +45,12 @@
       color: var(--op-color-neutral-on-plus-max);
       box-shadow: var(--op-border-all) var(--op-color-neutral-plus-seven);
     }
+
+    &.feed__bubble--book-message {
+      background-color: var(--op-color-alerts-notice-plus-seven);
+      color: var(--op-color-alerts-notice-on-plus-seven-alt);
+      box-shadow: var(--op-border-all) var(--op-color-alerts-notice-plus-four);
+    }
   }
 
   .feed__request-form {
