--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -9,3 +9,5 @@
 @use './components/cards.scss';
 @use './components/feed.scss';
 @use './components/player.scss';
+@use './components/lobby.scss';
+@use './components/game_over.scss';
