--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -10,4 +10,4 @@
 @use './components/feed.scss';
 @use './components/player.scss';
 @use './components/lobby.scss';
-@use './components/game_over.scss';
+@use './components/game-over.scss';
