Add appending message to feed on play round

--- a/app/assets/stylesheets/components/feed.scss
+++ b/app/assets/stylesheets/components/feed.scss
@@ -3,12 +3,20 @@
   display: grid;
   grid-template-rows: 1fr auto;
 
-  .feed__responses {
+  .feed__output {
     display: flex;
     flex-direction: column;
     align-items: start;
     gap: var(--op-space-small);
     overflow: auto;
+
+    .feed__response-group {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      gap: var(--op-space-small);
+    }
 
     .feed__response {
       width: 100%;
