--- a/app/views/games/_feed.html.slim
+++ b/app/views/games/_feed.html.slim
@@ -3,28 +3,8 @@
     span Feed
     span.badge.badge--primary = "#{game.current_player.name}'s Turn"
   .panel__content
-    .feed 
-      .feed__responses
+    .feed
+      .feed__output
         - game.go_fish.round_results.reverse.each do |round|
-          .feed__bubble.feed__bubble--player-action
-            span = round.player_action(game.get_player_by_user(current_user))
-          .feed__response
-            i.icon.ph.ph-arrow-elbow-down-right
-            .feed__bubble.feed__bubble--player-response
-              span = round.player_response(game.get_player_by_user(current_user))
-          - if round.game_response(game.get_player_by_user(current_user))
-            .feed__response
-              i.icon.ph.ph-arrow-elbow-down-right
-              .feed__bubble.feed__bubble--game-response
-                span = round.game_response(game.get_player_by_user(current_user))
-          - round.drawn_cards.each do |player, card|
-            .feed__response
-              i.icon.ph.ph-arrow-elbow-down-right
-              .feed__bubble.feed__bubble--game-response
-                span.draw = round.draw_card_message(player, card)
-          - round.scored_books.each do |book|
-            .feed__response 
-              i.icon.ph.ph-arrow-elbow-down-right 
-              .feed__bubble.feed__bubble--book-message
-                span = round.book_message(game.get_player_by_user(current_user), book)
+          = render 'games/response-group', game: game, round: round
       = render 'games/request-form', game: game
