Reverting to the state of the project at f414f31

--- a/app/views/games/_game.html.slim
+++ b/app/views/games/_game.html.slim
@@ -1,7 +1,7 @@
 - if game.users.count == game.players_count
   - if game.game_over?
       = render 'games/game_over', game: game
-  .game id="game_id" data-id="#{game.id}"
+  .game 
     = render "games/players", game: game
     = render "games/feed", game: game
     = render "games/hand", game: game
