Add auto refreshing with Turbo Streams

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -11,3 +11,4 @@
 @use './components/player.scss';
 @use './components/lobby.scss';
 @use './components/game-over.scss';
+@use './components/game-page.scss';
