--- a/app/assets/stylesheets/components/game.scss
+++ b/app/assets/stylesheets/components/game.scss
@@ -8,6 +8,8 @@
   grid-template-columns: 1fr min(var(--gf-game-sidebar-width), 40%);
   grid-template-rows: 1fr var(--gf-game-footer-height);
 
+  overflow: hidden;
+
   .game__header {
     padding: var(--op-space-medium);
 
