--- a/app/views/games/_game_over.html.slim
+++ b/app/views/games/_game_over.html.slim
@@ -1,4 +1,4 @@
 .game-over
   .game-over__info
     span.game-over__title = "#{game.winner.name} Wins"
-    = link_to "Back to Games", games_path, class: "btn"
+    = link_to "Back to Games", games_path, class: "btn", data: { turbo_frame: "_top" }
