--- a/app/views/games/_players.html.slim
+++ b/app/views/games/_players.html.slim
@@ -1,13 +1,13 @@
 .panel.panel--players
   .panel__header.game__header
     span.game__title
-      a href=games_path
+      a href=games_path data-turbo-frame="_top"
         i.icon.icon--large.ph.ph-arrow-left
       span = game.name
     span.game__title = "#{game.users.count}/#{game.players_count}"
   .panel__content 
     span.panel__title Players
-    - game.opponents(current_user).each do |opponent|
+    - game.opponents(user).each do |opponent|
       details.accordion.player
         summary
           i.accordion__marker.ph.ph-caret-right
