--- a/app/views/games/_request-form.html.slim
+++ b/app/views/games/_request-form.html.slim
@@ -1,7 +1,7 @@
 = simple_form_for :round, url: game_rounds_path(game), html: { class: "feed__request-form" } do |form|
-  = form.input :target, collection: game.opponents(current_user).map(&:name), include_blank: false, class: "form-control"
-  = form.input :request, collection: game.get_player_by_user(current_user).hand.sort.reverse.map(&:rank).uniq, include_blank: false, class: "form-control"
-  - if game.current_player == game.get_player_by_user(current_user)
+  = form.input :target, collection: game.opponents(user).map(&:name), include_blank: false, class: "form-control"
+  = form.input :request, collection: game.get_player_by_user(user).hand.sort.reverse.map(&:rank).uniq, include_blank: false, class: "form-control"
+  - if game.current_player == game.get_player_by_user(user)
     = form.submit "Play Round", class: "btn btn--primary"
   - else 
     = form.submit "Play Round", class: "btn btn--primary", disabled: true
