--- a/app/views/games/show.html.slim
+++ b/app/views/games/show.html.slim
@@ -1,1 +1,5 @@
-= render @game
+.game-page
+  = turbo_stream_from "games:#{@game.id}:users:#{current_user.id}"
+  
+  = turbo_frame_tag "#{dom_id(@game, current_user.id)}"
+    = render @game, user: current_user
