Convert broadcasts to broadcasts_refreshes

--- a/app/views/games/_lobby.html.slim
+++ b/app/views/games/_lobby.html.slim
@@ -2,4 +2,4 @@
   .lobby__info
     span.lobby__title Waiting for players...
     span.lobby__title.lobby__title--bold = "#{game.users.count}/#{game.players_count}"
-    = link_to "Back to Games", games_path, class: "btn"
+    = link_to "Back to Games", games_path, class: "btn", data: { turbo_frame: "_top" }
