--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,5 +7,7 @@ html data-theme-mode='light'
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true
     meta content="width=device-width, initial-scale=1" name="viewport"
+    meta name="turbo-refresh-method" content="morph"
+    meta name="turbo-refresh-scroll" content="preserve"
   body
     = yield
