--- a/app/views/games/_hand.html.slim
+++ b/app/views/games/_hand.html.slim
@@ -1,7 +1,8 @@
-.panel.panel--hand
+.panel.panel--hand data-controller="hand"
   .panel__header 
     span Hand
+    button data-action="hand#sort" Sort
   .panel__content.panel__content--h-scroll
-    .cards
-      - game.get_player_by_user(user).hand.sort.reverse.each do |card|
-        = image_tag "cards/#{card.rank}#{card.suit}.svg", class: "cards__card", alt: "#{card.rank}#{card.suit}"
+    .cards data-hand-target="cards"
+      - game.get_player_by_user(user).hand.each do |card|
+        = image_tag "cards/#{card.rank}#{card.suit}.svg", class: "cards__card #{card.value}", alt: "#{card.rank}#{card.suit}"
