--- a/app/views/games/_game-row.html.slim
+++ b/app/views/games/_game-row.html.slim
@@ -4,10 +4,11 @@
     span = "#{game.users.count}/#{game.players_count}"
   .game-row__actions
     - if game.users.first == current_user
-      = button_to "Delete", game, method: :delete, class: "btn btn--destructive"
+      = button_to "Delete", game, method: :delete, class: "btn btn--destructive", data: { turbo_confirm: "Are you sure?" }
       = link_to "Edit", edit_game_path(game), class: "btn"
     
     - if game.users.include? current_user
       = link_to "Play", game, class: "btn btn--primary"
     - else 
       = button_to "Join", game_users_path, class: "btn", params: { game_id: game, user_id: current_user}
+= render 'games/confirm'
