--- a/app/views/games/_confirm.html.slim
+++ b/app/views/games/_confirm.html.slim
@@ -1,5 +1,5 @@
 #confirm.modal-wrapper.modal-wrapper--demo
-  .modal-wrapper__backdrop
+  .modal-wrapper__backdrop.confirm-cancel
   .modal
     .modal__header
       span#confirm-title
