--- a/app/views/games/_hand.html.slim
+++ b/app/views/games/_hand.html.slim
@@ -7,6 +7,6 @@
         button.btn data-action="hand#sort_by_rank" Rank
         button.btn data-action="hand#sort_by_suit" Suit
   .panel__content.panel__content--h-scroll
-    .cards data-hand-target="cards"
+    .cards#hand data-hand-target="cards"
       - game.get_player_by_user(user).hand.each do |card|
         = image_tag "cards/#{card.rank}#{card.suit}.svg", class: "cards__card", alt: "#{card.rank}#{card.suit}", data: { value: card.value, suit: card.suit }
