Fix infinite round advance on hand empty end state

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -12,3 +12,4 @@
 @use './components/lobby.scss';
 @use './components/game-over.scss';
 @use './components/game-page.scss';
+@use './components/sidebar.scss';
