Add more styling to index page

--- a/app/assets/stylesheets/components/cards.scss
+++ b/app/assets/stylesheets/components/cards.scss
@@ -10,6 +10,7 @@
 
   .cards__card {
     height: var(--gf-playing-card-height);
+    box-shadow: var(--op-shadow-medium);
     position: relative;
     bottom: 0;
     transition: 0.1s;
