Add scrolling to players panel, add bottom margin to feed

--- a/app/assets/stylesheets/components/feed.scss
+++ b/app/assets/stylesheets/components/feed.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    padding-bottom: var(--op-space-x-large);
     gap: var(--op-space-small);
     overflow: auto;
 
