--- a/app/assets/stylesheets/components/player.scss
+++ b/app/assets/stylesheets/components/player.scss
@@ -1,4 +1,5 @@
 .player {
+  flex: none;
   background-color: var(--op-color-primary-plus-eight);
   box-shadow: var(--op-border-all) var(--op-color-primary-plus-four);
   border-radius: var(--op-radius-x-large);
