--- a/app/assets/stylesheets/components/panel.scss
+++ b/app/assets/stylesheets/components/panel.scss
@@ -34,7 +34,10 @@
   &.panel--players {
     --gf-panel-header-height: 7rem;
 
+    overflow: hidden;
+
     .panel__content {
+      overflow-y: auto;
       display: flex;
       flex-direction: column;
       gap: var(--op-space-medium);
