--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -13,3 +13,4 @@
 @use './components/game-over.scss';
 @use './components/game-page.scss';
 @use './components/sidebar.scss';
+@use './components/stats.scss';
